# prome

./: .gitignore  CMakeLists.txt  README.md  WIRING.md  partitions.csv  sdkconfig.defaults
assets/icons/: README.md
cmake/: icons.cmake
components/app_buddy/: CMakeLists.txt  app_buddy.c  icon_buddy.c  panda_sprite.c  panda_sprite.h
components/app_camera/: CMakeLists.txt  app_camera.c  icon_camera.c
components/app_clock/: CMakeLists.txt  app_clock.c  icon_clock.c
components/app_settings/: CMakeLists.txt  app_settings.c  icon_settings.c
components/app_touch/: CMakeLists.txt  app_touch.c  icon_touch.c
components/bsp/: CMakeLists.txt  bsp.c  idf_component.yml
components/bsp/include/: bsp.h  bsp_config.h
components/camera/: CMakeLists.txt  camera.c  idf_component.yml
components/camera/include/: camera.h
components/capability_brightness/: CMakeLists.txt  capability_brightness.c
components/capability_brightness/include/: capability_brightness.h
components/capability_camera/: CMakeLists.txt  capability_camera.c
components/capability_camera/include/: capability_camera.h
components/shell/: CMakeLists.txt  app_host.c  capability_host.c  idf_component.yml  launcher.c  linker.lf  ota.c  shell.c  storage.c  wallpaper.c
components/shell/include/: app_api.h  app_descriptor.h  app_host.h  capability.h  capability_host.h  launcher.h  ota.h  shell.h  storage.h  theme.h
main/: CMakeLists.txt  app_main.c  idf_component.yml
